@@ -42,6 +42,7 @@ Current:
         (patch #8529 2 more ftdi_syncbb devices)
 
   * Bugfixes
+    - bug #46021: Please add read in the memory lock section of ATtiny85
     - bug #42337 avrdude.conf updates for UM232H/CM232H
     - bug #42056: double free or corruption triggered at exit
     - bug #42158: Linux GPIO - Source Typo
